--- a/programming/git.html
+++ b/programming/git.html
@@ -40,6 +40,7 @@ git push -f origin task-3
     git config -—global user.name "John Doe" 
     git config -—global user.email johndoe@example.com
     git config -—global -l
+    git config core.autocrlf false
 
     git clone url   // Clone a repository into a new directory 
     git init    // Create an empty Git repository or reinitialize an existing one 
