--- a/programming/golang.html
+++ b/programming/golang.html
@@ -20,6 +20,7 @@
     <a href="https://youtu.be/HtQLBdD82vE">Кодогенерация в Go (2017)</a><br>
     Kubernetes<br>
     <a href="https://www.vugu.org/">Vugu: A modern UI library for Go+WebAssembly</a><br>
+    <a href="https://youtu.be/uO268voCGwA">Как 200 строк на Go помогли нам освободить 15 серверов – Паша Мурзаков (Badoo)</a><br>
     <a href="https://youtu.be/rcvA5gSwj2o">“Go, please”: language server под микроскопом | Илья Данилкин, Авито. 2020</a><br>
     <a href="https://youtu.be/hKnWq4RmNKE">Работа с миграциями базы данных в Go | Тамара Веденина, Ozon.ru. 2020</a><br>
     <a href="https://youtu.be/mKT-bLdRGvQ">CI/CD для Go проектов на drone.io | Алик Хилажев, Marketplace Technologies. 2020</a><br>
