--- a/programming/html.html
+++ b/programming/html.html
@@ -60,7 +60,10 @@ multiple  - позволяет выбирать множество файлов.
 name=""
 required  - требует обязательного заполнения
 placeholder="" - надпись в поле формы
-value=""</pre>
+value=""
+minlength="10"
+maxlength="256"
+</pre>
       <hr>
 <div style="display: flex">
       <p><pre>
