--- a/programming/index.html
+++ b/programming/index.html
@@ -233,6 +233,17 @@ s { color: red; }
 </div>
 
 <div>
+    Erlang <br>
+    Elixir <br>
+    Phoenix <br>
+    Phoenix LiveView <br>
+    <a href="https://youtu.be/QwL2XHXHQl4">Фронтенд без JS</a><br>
+    <pre><code>
+<%    %>
+    </code></pre>
+</div>
+
+<div>
     <h2>WebAssembly</h2>
     <a href="https://vk.com/doc41637949_521818112">Никита Зимин WebAssembly (2019)</a><br>
     <a href="https://frontendconf.ru/moscow/2019/abstracts/4782">RUST + WEBASSEMBLY (2019)</a><br>
@@ -265,9 +276,10 @@ window.parent.postMessage(await handle(location))
 <div><h2>AI</h2>
     ELIZA <br>
     IBM Watson <br>
-    <a href="https://youtu.be/BX2M8t5BA3s">Machine Learning &</a><br>
+    <a href="https://youtu.be/BX2M8t5BA3s">Machine Learning &<br>
     Deep Neural Networks<br>
-    TensorflowJS<br>
+    TensorflowJS</a><br>
+    <a href="https://habr.com/ru/company/avito/blog/488936/">Google Colab и TensorflowJS</a><br>
 </div>
 
 <div><h2>Реактивное программирование</h2>
@@ -385,11 +397,11 @@ window.parent.postMessage(await handle(location))
 
 <div>
     <h2>auth</h2>
-    <a href="https://github.com/leonardasf1/auth_redbeanPHP">auth_redbeanPHP</a>
+    <a href="https://github.com/leonardasf1/auth_redbeanPHP">auth_redbeanPHP</a><br>
     <a href="https://youtu.be/vvgOPJQA8Zk"> PHP - 100% Защищённая Регистрация и Авторизация за 30 минут.</a><br>
     <a href="https://youtu.be/eCItZh6uMVc"> Авторизация и регистрация с сессией на чистом PHP</a><br>
-    <a href="https://habr.com/ru/company/1cloud/blog/445534/">WebAuthn - проект закрыт</a><br>
-    <a href="https://github.com/Stanford/webauth">WebAuth - проект закрыт</a><br>
+    <a href="https://habr.com/ru/company/1cloud/blog/445534/">WebAuthn</a>/
+    <a href="https://github.com/Stanford/webauth">WebAuth</a> - проекты закрыты<br>
 </div>
 
 <div>
@@ -541,6 +553,7 @@ public class Home {
 <div>
     <a href="../nitro/" target="_blank">Nitro</a><br>
     <a href="primery/skillboxLanding/" target="_blank">skillboxLanding</a><br>
+    <a href="primery/about/" target="_blank">about</a><br>
     <a href="https://codepen.io/leonardasf1/pen/QegKyX/">video-playerJS</a><br>
     <a href="https://codepen.io/leonardasf1/pen/NWWgzmx">DNA</a><br>
     <hr>
