--- a/programming/expressjs.html
+++ b/programming/expressjs.html
@@ -12,6 +12,9 @@
 app.js
 	const express = require('express');
 	const app = express();
+  const middleware = require('./middleware');
+  middleware(app, config);
+  app.listen(port, host, async (err) => {});
 
 	// npm install --save hbs
 	app.set('view engine', 'hbs'); //Handlebars
