--- a/programming/net.html
+++ b/programming/net.html
@@ -7,6 +7,7 @@
 	<a href="https://youtu.be/rQDd5kCwDj8">Обманчивая простота HTTP/2</a><br>
 	<a href="https://youtu.be/FmrHmZXnicA">HTTP/2 Push: как использовать эффективно?</a><br>
 	<a href="https://youtu.be/3e7GK8hcDx0">HTTP/3 - что это такое и чего ожидать?</a><br>
+	<a href="https://youtu.be/T_4xgLUJFF0">HTTP/3… а уже можно? | Александр Зубов, Авито. 2020</a>
 </div>
 
 <div>
