--- a/programming/index.html
+++ b/programming/index.html
@@ -192,6 +192,7 @@ s { color: red; }
 <div>
 <a href="#safety">Safety</a><br>
 <a href="#database">DB/SQL</a><br>
+<a href="#auth">Authentication</a><br>
 <a href="#tests">Tests</a><br>
 <a href="#net">Net</a>
 </div>
@@ -349,8 +350,10 @@ window.parent.postMessage(await handle(location))
 
 
 <div>
-    <h2>design</h2>
+    <h2>design / Верстка</h2>
     <ul>
+        <li><a href="https://www.muicss.com/">MUI</a></li>
+        <li><a href="bootstrap.html" target="_blank"><img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png" alt="Bootstrap"> Bootstrap</a></li>
         <li><a href="https://materialdesignicons.com/">materialdesignicons</a></li>
         <li><a href="https://anatolykulikov.ru/review/glyphhanger-tool-to-optimize-fonts/">glyphhanger-tool-to-optimize-fonts</a></li>
         <li><a href="https://github.com/bramstein/homebrew-webfonttools">homebrew-webfonttools</a></li>
@@ -393,15 +396,6 @@ window.parent.postMessage(await handle(location))
     <rect width="8" height="8" style="fill: #00A4EF; stroke-width: .2; stroke: black" y="8"></rect></svg> .Microsoft Azure</a><br>
     <a href="https://www.namecheap.com"><img src="https://www.namecheap.com/assets/img/nc-icon/namecheap-icon-72x72.png" height="16px" alt="namecheap.com"> namecheap.com</a><br>
     <a href="https://gpdhost.com"><img src="https://gpdhost.com/images/favicon/favicon-32x32.png" height="16px" alt="gpdhost.com"> gpdhost</a><br>
-</div>
-
-<div>
-    <h2>auth</h2>
-    <a href="https://github.com/leonardasf1/auth_redbeanPHP">auth_redbeanPHP</a><br>
-    <a href="https://youtu.be/vvgOPJQA8Zk"> PHP - 100% Защищённая Регистрация и Авторизация за 30 минут.</a><br>
-    <a href="https://youtu.be/eCItZh6uMVc"> Авторизация и регистрация с сессией на чистом PHP</a><br>
-    <a href="https://habr.com/ru/company/1cloud/blog/445534/">WebAuthn</a>/
-    <a href="https://github.com/Stanford/webauth">WebAuth</a> - проекты закрыты<br>
 </div>
 
 <div>
@@ -545,12 +539,12 @@ public class Home {
     <li><a href="http://citforum.ru/">citforum.ru</a></li>
     <li><a href="https://highlightjs.org/">highlightjs</a></li>
     <li><img src="https://www.sonarsource.com/favicon.ico" alt=""> <a href="https://www.sonarsource.com/products/codeanalyzers/sonarjs.html">sonarJS</a> - анализатор кода</li>
-    <li><a href="bootstrap.html" target="_blank"><img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png" alt="Bootstrap"> Bootstrap</a></li>
     <li><a href="https://angularjs.org/">angularJS.org</a></li>
   </ul>
 </div>
 
 <div>
+    <a href="https://podcast-questions-ap.web.app/">podcast-questions-ap.web.app</a><br>
     <a href="../nitro/" target="_blank">Nitro</a><br>
     <a href="primery/skillboxLanding/" target="_blank">skillboxLanding</a><br>
     <a href="primery/about/" target="_blank">about</a><br>
