--- a/programming/safety.html
+++ b/programming/safety.html
@@ -2,10 +2,47 @@
 <div id="pageLogo"><a href="#safety">Safety</a></div>
 
 <div>
+	<a href="https://youtu.be/HqUgIV2FMD8">Безопасность веб-приложений – Олег Мохов .2015</a> <a href="https://urfu-2015.github.io/webdev-slides/19-security/">слайды</a><br>
+	<a href="https://www.youtube.com/playlist?list=PLdJo1XilUTZPOJ1kSnoKheT7YSygP9FIO">Школа информационной безопасности .2018</a><br>
 	<a href="https://www.youtube.com/playlist?list=PLg-HS8jRxHWElJ65OfiWn54DicFUbRAls">Взлом и защита сайта. 2015</a><br>
 	<a href="https://youtu.be/2gthjl2Lks4">Алексей Богачук – Безопасность: уязвимости вашего приложения.2017</a><br>
 	<a href="https://youtu.be/ENPL3QE1J7w">Что такое ФРОД атака и как от неё защититься?.2017</a><br>
+	<a href="https://www.youtube.com/playlist?list=PLdJo1XilUTZPbJ4wZdrC3JUqFmIBA3pvC">YaC 2018. Информационная безопасность</a><br>
+</div>
+
+<div>
 	<a href="https://habr.com/ru/company/pt/blog/264599/">Человек — это главная уязвимость. Немного о социальной инженерии на PHDays V</a><br>
-	<a href="https://youtu.be/rSp2cpAI4Tc">Безопасность веб-приложений - Эльдар Заитов.2018</a><br>
-	<a href="https://youtu.be/qXQYd9y0neU">10 глупых вопросов СПЕЦИАЛИСТУ ПО КИБЕРБЕЗОПАСНОСТИ</a><br>
+	для регистраций отдельная почта test+random@gmail.com??<br>
+</div>
+
+<div>
+	SQL injection  <br>
+	Эскейпинг небезопасных символов перед использованием в запросе  <br>
+	<a href="https://www.php.net/manual/ru/mysqli.real-escape-string.php">mysqli_real_escape_string php</a> <br>
+	<a href="https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/encodeURI">encodeURI ()</a> <br>
+	Использование параметизированных запросов(prepared statements), ODM, ORM <br>
+</div>
+
+<div>
+	XSS (cross site-scripting) <br>
+	Валидация входных данных<br>
+	Эскейпинг данных при генерации страниц<br>
+	Использование санитайзеров (sanitize-html)<br>
+	CSP (Content-Security-Policy)<br>
+	Флаг HTTPOnly, SecureOnly для кук<br>
+	Заголовок X-XSS-Protection<br>
+</div>
+
+<div>
+	ClickJacking<br>
+	X-Frame-Options: SAMEORIGIN //только со своего домена<br>
+	X-Frame-Options: DENY //запрет фреймов<br>
+</div>
+
+<div>
+	CSRF (Cross Site Request Forgery)<br>
+</div>
+
+<div>
+	
 </div>
