--- a/sailing/sailboats/Clipper.html
+++ b/sailing/sailboats/Clipper.html
@@ -227,11 +227,11 @@ to the American shores, Australia, and at intervals to England, until about
 1886, the Halloween being the last. Their life was not over, however, 
 and with the addition of the new iron clipper the Wool and 
 Emigrant Trades to Australia and New Zealand still proved economical enough 
-to keep them going, and on occasions to outpace their <b>propeller driven 
+to keep them going, and on occasions to outpace their propeller driven 
 rivals, even with rigs much reduced from those carried during the peak of 
 the Tea Trade. One or 2 managed to earn a living into the next century, the 
 Cutty Sark being an obvious example. </p>
-<p><br></p>
+<br>
 <p><img src="../sailing/sailboats/Clipper/CompositeHomestead.jpg" align="right"></p>
 <p>Bulwarks and Stern<br>
 As to her deck fittings, her bulwarks were panelled in teak, with a solid brass rail 
