--- a/programming/database.html
+++ b/programming/database.html
@@ -160,6 +160,7 @@ insertStudent('Петр', 'petr', 'MT-204')
 sudo npm install -g firebase-tools
 firebase login
 firebase init
+. hosting //для деплоя на firebase.hosting
 npm run build
 firebase deploy
 	</code></pre>
