--- a/programming/git.html
+++ b/programming/git.html
@@ -115,4 +115,7 @@ usage: git [--version] [--help] [-C < path>] [-c < name>=< value>]
        [-p | —paginate | -P | —no-pager] [--no-replace-objects] [--bare] 
        [--git-dir=< path>] [--work-tree=< path>] [--namespace=< name>] 
        < command> [< args>] 
+
+    git remote -v
+    git remote set-url origin https://github.com/USERNAME/REPOSITORY.git
 </code></pre>
