--- a/programming/index.html
+++ b/programming/index.html
@@ -355,6 +355,7 @@ window.parent.postMessage(await handle(location))
         <li><a href="https://www.muicss.com/">MUI</a></li>
         <li><a href="bootstrap.html" target="_blank"><img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png" alt="Bootstrap"> Bootstrap</a></li>
         <li><a href="https://materialdesignicons.com/">materialdesignicons</a></li>
+        <li><a href="https://loading.io/">loading.io</a></li>
         <li><a href="https://anatolykulikov.ru/review/glyphhanger-tool-to-optimize-fonts/">glyphhanger-tool-to-optimize-fonts</a></li>
         <li><a href="https://github.com/bramstein/homebrew-webfonttools">homebrew-webfonttools</a></li>
         <li>Axure - проектирование прототипа сайта/приложения</li>
@@ -432,6 +433,7 @@ window.parent.postMessage(await handle(location))
   </li>
   <li><a href="https://www.sublimemerge.com/"><img src="https://www.sublimemerge.com/favicon.ico" alt="sublimemerge"> Sublime Merge</a></li>
   <li><a href="https://github.com/tehcookies/bundlers-comparison">Bundlers</a>: Parcel, Rollup</li>
+  <li><a href="https://jsonplaceholder.typicode.com/">JSONplaceholder</a></li>
 </ul>
 </div>
 
@@ -544,7 +546,7 @@ public class Home {
 </div>
 
 <div>
-    <a href="https://podcast-questions-ap.web.app/">podcast-questions-ap.web.app</a><br>
+    <a href="https://mini-haber.web.app/">mini-haber.web.app</a><br>
     <a href="../nitro/" target="_blank">Nitro</a><br>
     <a href="primery/skillboxLanding/" target="_blank">skillboxLanding</a><br>
     <a href="primery/about/" target="_blank">about</a><br>
