--- a/programming/react.html
+++ b/programming/react.html
@@ -33,7 +33,38 @@
     </ul>
 </div>
 <div>
+    <a href="https://youtu.be/xJZa2_aldDs">React JS. Полный Курс 2020</a><br>
+    <a href="https://www.youtube.com/playlist?list=PLqKQF2ojwm3n6YO3BDSQIg35GGKn_ImFD">Введение в React Hooks .2019</a><br>
+    <a href="https://youtu.be/V1rhxheJg4A">React JS - Приложение целиком (Контекст, Хуки, Анимации, Деплой)</a><br>
+    <a href="https://youtu.be/OvLWWvjoi8s">React JS + TypeScript. Введение в Типизацию (+ React Router DOM)</a><br>
+    <a href="https://youtu.be/G3GGXIhggGs">React Redux + Saga. Практический Курс</a><br>
+    <a href="https://youtu.be/YdYyYMFPa44">Redux. Полный Курс 2020</a><br>
     <a href="https://itvdn.com/ru/video/isomorphic-application">Изоморфные приложения на React</a><br>
     <a href="https://youtu.be/1kopPz0Fhlk">Первое веб-приложение с React.JS (2019)</a><br>
-    <a href="https://www.youtube.com/watch?v=riRrKFkbS-g&list=PLVfMKQXDAhGVCB401FJhb4HC6tAMe5YdL"> Уроки React Js для новичков (Web Developer Blog.2017)</a><br>
+</div>
+
+<div>
+    <pre><code>
+npx create-react-app appName
+
+npm install prop-types
+    </code></pre>
+    <pre><code>
+const styles = {
+    ul: {
+        listStyle: 'none'
+    }
+}
+export default function TemplateFuncName(props) {
+  return (
+    < ul style={styles.ul}>
+      { props.arrName.map(i => {
+        return < Template2FuncName i={i} />
+      }) }
+    < /ul>
+  )
+}
+< TemplateFuncName arrName={arrName} />
+
+    </code></pre>
 </div>
