--- a/Skateboard/index.html
+++ b/Skateboard/index.html
@@ -113,6 +113,7 @@ Sector9 LOOKOUT <br>
 
 <div>
 <ul>
+<li><a href="https://youtu.be/bmTkC0muSQ8">Прыжковая тренировка для райдеров</a></li>
 <li><a href="https://youtu.be/k_n34pzp5yU"> Как кататься на лонгборде и скейтборде. Видео урок .2017</a></li>
 <li><a href="https://youtu.be/0B5BEicTRtc"> Как правильно стоять и набирать скорость на лонгборде. Видео урок .2017</a></li>
 <li><a href="https://youtu.be/l3EyJPm2E6s"> Longboarding 101 - How to Stop; Foot Breaking, Advanced Carving, Coleman Slide .2016</a></li>
