--- a/programming/angular.html
+++ b/programming/angular.html
@@ -2,6 +2,7 @@
 <div id="pageLogo"><a href="#angular"><img src="https://angular.io/assets/images/favicons/favicon.ico" alt="angular"></a></div>
 
   <div id="links">
+    <a href="https://youtu.be/h9lGLpvKeFI">NgRuAir #14 - Codelab</a> <a href="https://codelab.fun">Angular Codelab</a><br>
     <a href="https://angular.io"><img src="https://angular.io/assets/images/favicons/favicon.ico"></a><br>
     <a href="https://itvdn.com/ru/webinars/description/angular-jump-start">Angular 4 Jump Start. (2017)</a><br>
     <a href="https://itvdn.com/ru/video/angular2_essential"> Angular 2 Essential (2016)</a><br>
@@ -16,7 +17,11 @@
     <a href="http://swimlane.github.io/ngx-datatable/#client-sorting">пагинация</a><br>
     <a href="https://www.twilio.com/blog/faster-javascript-web-apps-angular-universal-transferstate-api-watchdog">TransferState Service and an API Watchdog</a><br>
     <a href="https://www.twilio.com/blog/expedited-two-factor-authentication-angular-twilio-authy">Expedited Two-Factor Authentication  with Authy</a><br>
+    <a href="https://gist.github.com/obenjiro/23a52ec45d66b160384dc3b07026b338">obenjiro</a><br>
+    <a href="https://docs.google.com/presentation/d/1EtKd-vNYDjuVl6dS4TUNvXNhk3FMlqjxxhwNWY5YNuA/mobilepresent?slide=id.p">Динамические компоненты с Ivy</a><br>
+    <a href="https://docs.google.com/presentation/d/1oB3ovOCFVoIKCxPOy0kvBJfVq-tvdKgB1CDDt0pJc-I/mobilepresent?slide=id.g7376ad97b4_0_124">Обработка событий</a><br>
   </div>
+
   <div><pre><code>
 sudo npm install -g @angular/cli
 ng v // версия
