--- a/programming/bootstrap.html
+++ b/programming/bootstrap.html
@@ -94,5 +94,13 @@
 			</article>
 		</section>
 	</main>
+    <div>
+        <pre><code>
+yarn add bootstrap
+//in .scss
+@import "~bootstrap/scss/bootstrap";
+
+        </code></pre>
+    </div>
 </body>
 </html>
