--- a/programming/database.html
+++ b/programming/database.html
@@ -1,7 +1,12 @@
 <div id="pageTitle">Data Base</div>
 
 <div>
-	<a href="https://developer.mozilla.org/ru/docs/Learn/Server-side/Express_Nodejs/mongoose">Использование базы данных</a>
+	<a href="https://developer.mozilla.org/ru/docs/Learn/Server-side/Express_Nodejs/mongoose">Использование базы данных</a><br>
+  <a href="https://habr.com/ru/company/hexlet/blog/274675/">RESTful</a><br>
+  <a href="https://youtu.be/7CR5eH6a8Fo">Базы данных и Kubernetes. 2018</a><br>
+  <a href="https://redbeanphp.com/index.php">RedBeanPHP</a> ORM<br>
+  <a href="https://youtu.be/vbhSrZxm66E">Как работает ClickHouse, лекция в ШАД. 2018</a><br>
+  WebSQL - проект закрыт в 2010 <br>
 </div>
 
 <div>SQL
@@ -30,8 +35,15 @@ DELETE FROM articles WHERE title = '' AND views = 0;
 	</code></pre>
 </div>
 
-<div>
+<div><h2>MySQL</h2>
+	<a href="https://youtu.be/N3THJnbwlLI">СУБД MySQL - Павел Пушкарев. 2014</a><br>
+</div>
+
+<div><h2>GraphQL</h2>
+	<a href="https://youtu.be/5h7zX45YPuQ">ApolloClient 3 — прощаемся с Redux, REST API и Relay - Павел Черторогов. 2020</a><br>
+	<a href="https://www.apollographql.com/">ApolloGraphQL.com</a><br>
 	<a href="https://relay.dev/"><img src="https://relay.dev/img/favicon.png" alt="relay"> relay.dev</a><br>
+	<a href="https://youtu.be/smFyitWV2fE">Relay Modern: работа с локальными данными | Александр Руденко</a><br>
 	<a href="https://graphql.org/"><img src="https://graphql.org/img/logo.svg" alt="graphql.org"> GraphQL</a><br>
   <a href="https://habr.com/en/post/326986/">Habr</a><br>
   <a href="https://tproger.ru/translations/graphql-beginners-guide/">tproger</a><br>
@@ -40,14 +52,22 @@ DELETE FROM articles WHERE title = '' AND views = 0;
   <a href="https://raw.githubusercontent.com/sogko/graphql-shorthand-notation-cheat-sheet/master/graphql-shorthand-notation-cheat-sheet.png">graphql-shorthand-notation</a><br>
 </div>
 
+<div><h2>Яндекс.Облако</h2>
+	<a href="https://cloud.yandex.ru/events/100">Обзор платформы Яндекс.Облако</a><br>
+	<a href="https://youtu.be/xyMN1EA9p5Y">Базы данных в облаках / Владимир Бородин (Яндекс) 2019</a><br>
+	<a href="https://cloud.yandex.ru/events/101">Cloud Security Online Meetup</a><br>
+</div>
+
 <div>
 	<img src="https://www.mongodb.com/assets/images/global/favicon.ico" alt="MongoDB"> MongoDB
 	<div id="links">
+	<a href="https://cloud.yandex.ru/events/104">Опыт использования MongoDB</a><br>
 	<a href="https://youtu.be/CZKl22peGJk">основы MongoDB - Олег Мохов (2016)</a><br>
 	<a href="https://youtu.be/8bE_PBRriyU">NodeJS, Express, MongoDB - Приложение целиком (2019)</a><br>
 	<a href="https://youtu.be/ivDjWYcKDZI">MERN - с Нуля до Деплоя (Mongo, Express, React, Node) (2019)</a><br>
 	<a href="https://youtu.be/_I9vLOAsFew">Базы данных. MongoDB. Технострим(2017)</a><br>
   <a href="https://itvdn.com/ru/video/mongodb">ITVDN - Основы MongoDB</a><br>
+  <a href="https://youtu.be/-lVpErvI168">NoSQL СУБД MongoDB - Андрей Годин. 2014</a><br>
   <a href="https://mongoosejs.com/">Mongoose ODM for node.js</a>
 	<hr>
 	Денормализация<br>
@@ -166,10 +186,7 @@ firebase deploy
 	</code></pre>
 </div>
 
-<div>
-
-  <a href="https://habr.com/ru/company/hexlet/blog/274675/">RESTful</a><br>
-  <a href="https://redbeanphp.com/index.php">RedBeanPHP</a> ORM<br>
+<div><h2>PostgreSQL</h2>
+	<a href="https://youtu.be/ejLzS6rVpkk">Базы данных: PostgreSQL - Владимир Бородин. 2014</a><br>
   <a href="https://itvdn.com/ru/video/postgresql">ITVDN - PostgreSQL</a><br>
-  WebSQL - проект закрыт в 2010 <br>
 </div>
