--- a/programming/index.html
+++ b/programming/index.html
@@ -233,6 +233,12 @@ s { color: red; }
 <a href="https://www.youtube.com/playlist?list=PLKaafC45L_SThr77Wm716ba3Ca-mOr-xc">Курсы по разработке интерфейсов 2016</a><br>
 </div>
 
+<div>Search
+  <ul>
+    <li><a href="https://multisearch.io/">multisearch.io</a></li>
+  </ul>
+</div>
+
 <div>
     Erlang <br>
     Elixir <br>
@@ -257,6 +263,7 @@ s { color: red; }
     <h2>lighthouse</h2>
     <a href="https://github.com/aFarkas/lazysizes">lazysizes</a><br>
     <a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps">PWA</a> , TWA <br>
+    <a href="https://create-react-app.dev/docs/making-a-progressive-web-app/">making-a-progressive-web-app</a><br>
     <a href="https://developer.mozilla.org/ru/docs/Web/%D0%9C%D0%B0%D0%BD%D0%B8%D1%84%D0%B5%D1%81%D1%82">manifest.webmanifest</a><br>
     <a href="https://developer.mozilla.org/en-US/docs/Web/Progressive_web_apps/Offline_Service_workers">Service Workers</a><br>
     <pre><code>
@@ -289,7 +296,7 @@ window.parent.postMessage(await handle(location))
     <a href="https://medium.com/russian/%D1%80%D1%83%D0%BA%D0%BE%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE-%D0%BF%D0%BE-flux-%D0%B2-%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B0%D1%85-d59c03562ea">Руководство по Flux в картинках</a><br>
     Redux Observable<br>
     RxJS<br>
-    Svelte<br>
+    Svelte , <a href="https://cloud.mail.ru/public/4aJ9/qqyXc2dnf/">Svelte Ru Meetup 2020</a><br>
 </div>
 
 <div><h2>Квантовые вычисления</h2>
@@ -346,15 +353,18 @@ window.parent.postMessage(await handle(location))
 <a href="https://alexanderskulikov.github.io/files/algorithms_href.pdf">algorithms_href.pdf</a><br>
 <a href="http://bigocheatsheet.com">Шпаргалка по O-нотации</a><br>
 <a href="https://youtu.be/MWsfHQaUzI0">Алгоритмы и структуры данных (С++), лекция №1</a><br>
+<a href="https://habr.com/p/497476/">Структуры данных на примере JavaScript</a><br>
 </div>
 
 
 <div>
     <h2>design / Верстка</h2>
     <ul>
+        <li><a href="https://materializecss.com">materialize-css</a></li>
         <li><a href="https://www.muicss.com/">MUI</a></li>
         <li><a href="bootstrap.html" target="_blank"><img src="https://getbootstrap.com/docs/4.3/assets/img/favicons/apple-touch-icon.png" alt="Bootstrap"> Bootstrap</a></li>
         <li><a href="https://materialdesignicons.com/">materialdesignicons</a></li>
+        <li><a href="https://thenounproject.com/">theNounProject</a></li>
         <li><a href="https://loading.io/">loading.io</a></li>
         <li><a href="https://anatolykulikov.ru/review/glyphhanger-tool-to-optimize-fonts/">glyphhanger-tool-to-optimize-fonts</a></li>
         <li><a href="https://github.com/bramstein/homebrew-webfonttools">homebrew-webfonttools</a></li>
@@ -366,6 +376,7 @@ window.parent.postMessage(await handle(location))
         <li><a href="http://www.cssdsgn.com"><img src="https://www.cssdsgn.com/icons/favicon-32x32.png" alt="cssdsgn"> cssdsgn.com</a></li>
         <li><a href="http://www.unsplash.com"><img src="https://unsplash.com/favicon-16x16.png" alt="unsplash"> unsplash.com</a></li>
         <li><a href="https://icons8.com"><img src="https://photos.icons8.com/vue-static/moose/favs/favicon.ico" alt="icons8"> icons8.com</a></li>
+        <li><a href="https://unicode-table.com/">Таблица символов Юникода</a></li>
         <li><a href="https://dribbble.com/search?q=cards">dribbble.com</a></li>
         <li><a href="https://coolors.co">coolors.co</a></li>
         <li><a href="https://color.adobe.com">color.adobe.com</a></li>
@@ -378,8 +389,11 @@ window.parent.postMessage(await handle(location))
 </div>
 
 <div class="img16">
-    <h2>Hosting / Domain /<br> Deploy</h2>
+    <h2>Hosting / Domain /<br> Deploy / DevOps</h2>
+    <a href="https://youtu.be/QXI1fWnfS7U">Практикум DevOps by Rebrain: Ansible</a><br>
+    <a href="https://github.com/yaoweibin/nginx_upstream_check_module">nginx_upstream_check_module</a><br>
     <a href="https://www.youtube.com/playlist?list=PLVSuF-7tjVUgPSW-YAhrGjnShRsW9gA7_">знакомство с Kubernetes</a><br>
+    <a href="https://youtu.be/QF4ZF857m44">Основы Docker. Большой практический выпуск .2020</a><br>
     <a href="https://youtu.be/bC-MUHhdiUk">Build, Deploy, CI – Сергей Гоголев, Сергей Жигалов</a><br>
     <a href="https://www.heroku.com/"><img src="https://brand.heroku.com/static/media/heroku-logo-stroke-gradient.bb410472.svg" alt="Heroku"> Heroku </a> . <a href="https://youtu.be/wG7hX8Np1Pg" title="деплой на heroku">.</a><br>
     DevOps: docker, CI/CD(Continuous Integration)<br>
@@ -520,6 +534,7 @@ public class Home {
 
 <div>
   <ul>
+    <li><a href="https://www.oreilly.com/">oreilly.com</a></li>
     <li><a href="http://progopedia.ru/">progopedia.ru</a></li>
     <li><a href="https://almanac.httparchive.org">almanac.httparchive</a></li>
     <li><a href="https://vk.com/doc41637949_513701117">code complete Стива Макконнела. 2010</a></li>
