--- a/programming/net.html
+++ b/programming/net.html
@@ -11,5 +11,11 @@
 </div>
 
 <div>
+	<a href="https://habr.com/ru/post/215117/">Простым языком об HTTP</a><br>
+	<a href="https://habr.com/ru/post/258285/">Что такое TLS</a><br>
+	<a href="https://habr.com/ru/post/491540/">Сети для начинающего IT-специалиста. Обязательная база</a><br>
+</div>
+
+<div>
 	localhost === 127.0.0.1
 </div>
