--- a/programming/php.html
+++ b/programming/php.html
@@ -33,6 +33,7 @@
     <li><a href="https://youtu.be/q35W2GXfcVo"> 100% Защита от SQL Инъекций!</a></li>
     <li><a href="https://youtu.be/sNQJfKYmRdo"> PHP Свой Фреймворк #1 - Введение, Структура</a></li>
     <li><a href="https://youtu.be/M08umlZZXY8"> PHP: основы безопасности сайта. SQL-инъекции, XSS-атаки и защита от них</a></li>
+    <li><a href="https://youtu.be/Bxe8FQyaCBs">легаси, монолиты, CQRS, GraphQL</a></li>
   </ul>
   </details>
     <a href="https://vk.com/doc74080069_484590435?hash=08493f67d4fccc62d4&dl=ab99cd2c3ee33df970">PHP 7 Дмитрий Котеров, Игорь Симдянов.2016.pdf</a><br>
