--- a/programming/tests.html
+++ b/programming/tests.html
@@ -3,6 +3,7 @@
     Tests</a></div>
 
 <div id="links">
+  <a href="https://vk.com/video-147415323_456239150">Сергей Ястребов — «Автоматическое тестирование»</a><br>
 	<a href="https://youtu.be/24gtY5xze9g">Тесты. Часть 1 - Сергей Жигалов(2016)</a><br>
   <a href="https://vk.com/@yandex4developers-mutacionnoe-testirovanie">Мутационное тестирование</a><br>
   <a href="https://learn.javascript.ru/testing-mocha">Автоматическое тестирование. Mocha</a><br>
