--- a/programming/vue.html
+++ b/programming/vue.html
@@ -18,6 +18,7 @@
     <a href="https://youtu.be/xot0SjunN2U">Специфика рендеринга vue.js-приложений на сервере. 2019</a><br>
     <a href="https://youtu.be/Ynhk9GqSsZI">Nuxt.js from the Core. 2019</a><br>
     <a href="https://youtu.be/DlXSA3_lSX4">Vue.js - Создание веб-приложения - Настройка firebase. Регистрация, аутентификация, Database</a><br>
+    <a href="https://www.youtube.com/playlist?list=PLu_62Q68DvTqmSjoY-3uPtJAXmT5WWMy1">Vuejs+Vuetify+Firebase Приложение</a><br>
   </div>
 
 <div>
