--- a/zdorovie/index.html
+++ b/zdorovie/index.html
@@ -80,6 +80,9 @@
 </script> -->
 <div>
 <h2>Упражнения и обучалки</h2>
+  <a href="https://youtu.be/VpAEbKphKBo">Самомассаж. Онлайн тренировка</a><br>
+  <a href="https://youtu.be/bmTkC0muSQ8">Прыжковая тренировка для райдеров</a><br>
+  <a href="https://youtu.be/CBIIf1D1n8w">силовая тренировка для скейтеров</a><br>
   <a href="https://youtu.be/Y8KX8wUiVgI">Arnold Schwarzenegger (Mr.Olympia 1975)</a><br>
   <a href="https://youtu.be/XsQGOHX-1kw">ТОП 6 лучших упражнений для НАТУРАЛЬНОГО БОДИБИЛДИНГА</a><br>
   <a href="https://youtu.be/EFOQHrd2jn4">Как тренировать СИЛЬНЕЙШИЙ УДАР (молот + покрышка)</a><br>
