--- a/guitar/index.html
+++ b/guitar/index.html
@@ -64,6 +64,7 @@
     <a href="https://youtu.be/O47Zeq3XmCM">Как играть блюз - Шаффл блюз (Shuffle Blues)</a><br>
     <a href=../guitar/Death_Voice_of_the_souls.txt target="_blank">Death - Voice of the souls (табулатура) </a><br>
     <a href="https://youtu.be/qa7guKV7IZs">Kirk Fletcher: Blues Masterclass</a><br>
+    <a href="https://youtu.be/SpXYhLZDcuM">The Lonely Shepherd На гитаре + разбор</a><br>
   </div>
 </div>
 
